--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,16 +1,16 @@
-name: Development workflow
+name: Production workflow
 
 on:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Development Code
+      - name: Production Code
         uses: actions/checkout@v2
       - name: Use Node.js 17.x
         uses: actions/setup-node@v1
